<resources>
    <string name="app_name">ACEMusic</string>
    <string name="action_settings">Settings</string>
    <string name="lockscreen_controls">Lockscreen Controls</string>
    <string name="startup_screen">Start Up screen</string>
    <string name="welcome_gplay_warning">*This feature may or may not work. If you are unable to login, please do not report the bug again, it has been taken into consideration, and I am fixing it!</string>
    <string name="about_app1">App maintained and updated by Aniruddh Chandratre. Special thanks to Saravan Pantham(Jams).</string>
    <string name="about_app2"><![CDATA[
    Copyright 2014 - Saravan Pantham\n

Licensed under the Apache License, Version 2.0 (the "License");\n
you may not use this file except in compliance with the License.\n
You may obtain a copy of the License at\n\n

   http://www.apache.org/licenses/LICENSE-2.0\n\n

Unless required by applicable law or agreed to in writing, software\n
distributed under the License is distributed on an "AS IS" BASIS,\n
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.\n
See the License for the specific language governing permissions and\n
limitations under the License.\n

    ]]></string>
    <string name="action_search">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="gain_left_caps">GAIN (L)</string>
    <string name="gain_right_caps">GAIN (R)</string>
    <string name="load_preset_caps">LOAD PRESET</string>
    <string name="save_preset_caps">SAVE PRESET</string>
    <string name="apply_to_caps">APPLY TO</string>
    <string name="load_preset">Load Preset</string>
    <string name="save_preset">Save Preset</string>
    <string name="apply_to">Apply to</string>
    <string name="title_activity_song_browser">ACE</string>
    <string name="artists">Artists</string>
    <string name="albums">Albums</string>
    <string name="songs">Songs</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="search_artists">Search Artists</string>
    <string name="search_albums">Search Albums</string>
    <string name="search_songs">Search Songs</string>
    <string name="playlists">Playlists</string>
    <string name="search_playlists">Search Playlists</string>
    <string name="artists_caps">ARTISTS</string>
    <string name="albums_caps">ALBUMS</string>
    <string name="songs_caps">SONGS</string>
    <string name="playlists_caps">PLAYLISTS</string>
    <string name="settings_caps">SETTINGS</string>
    <string name="play_all">Play All</string>
    <string name="pin">Pin</string>
    <string name="master_volume_caps">MASTER VOLUME</string>
    <string name="equalizer_caps">EQUALIZER</string>
    <string name="audio_effects_caps">AUDIO FX</string>
    <string name="virtualizer_caps">VIRTUALIZER</string>
    <string name="bass_boost_caps">BASS BOOST</string>
    <string name="reverb_caps">REVERB EFFECT:</string>
    <string name="now_playing_caps">NOW PLAYING</string>
    <string name="cover_art_style_description">Choose the way cover art is displayed on the Now Playing screen.</string>
    <string-array name="settings_titles">
        <item>Application Theme</item>
        <item>Now Playing Color Scheme</item>
        <item>Customize Pages</item>
        <item>Cover Art Style</item>
        <item>Auto Fetch Album Art</item>
        <item>Music Folders</item>
        <item>Rescan Music Folders</item>
        <item>Scan Frequency</item>
        <item>Licenses</item>
        <item>Contact Us</item>
    </string-array>
    <string-array name="settings_descriptions">
        <item>Choose a light or dark base theme for the entire application.</item>
        <item>Choose a color scheme for the Now Playing screen and playback controls.</item>
        <item>Rearrange the order of the app\'s main pages.</item>
        <item>Customize the way cover art is displayed on the Now Playing screen.</item>
        <item>Pick whether you want to use the album art fetching service or display embedded art.</item>
        <item>Choose the folders that contain your music. Files in other folders will be ignored.</item>
        <item>Rescan your music folders to update your music library.</item>
        <item>Set how often your want your music folders to be scanned for new files.</item>
        <item>Legal jingo about the app and its components.</item>
        <item>Spot a bug, have a feature request, or can\'t figure something out? We\'re here to help.</item>
    </string-array>
    <string name="title_activity_settings_detail">SettingsDetailActivity</string>
    <string name="app_theme">Theme</string>
    <string name="now_playing_color_scheme">Color Accent</string>
    <string-array name="app_theme_choices">
        <item>Light</item>
        <item>Dark</item>
    </string-array>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string-array name="now_playing_color_schemes">
        <item>White</item>
        <item>Gray</item>
        <item>Blue</item>
        <item>Red</item>
        <item>Turquoise</item>
        <item>Orange</item>
        <item>Purple</item>
        <item>Dark Blue</item>
        <item>Black</item>
    </string-array>
    <string name="folders_caps">FOLDERS</string>
    <string name="licenses">Licenses</string>
    <string name="oxygen_icons_license_description">This application uses one or more icons from the Oxygen Icon Theme, which is not affliated with this app in any way. The icons are distributed under the Creative Commons 3.0 ShareALike License. A copy of the license can be obtained here: </string>
    <string name="invalid_file_message"> doesn\'t seem to be an audio file. Check to make sure that the file extension is set properly.</string>
    <string name="error">Error</string>
    <string name="changes_saved">Changes saved.</string>
    <string name="title_activity_settings">Settings</string>
    <string name="genres_caps">GENRES</string>
    <string name="building_music_library">Building Music Library</string>
    <string name="welcome_text_1">Thanks for downloading ACE Music Player. To help you get started with the app, you\'ll be guided through a few initial steps. Swipe left to continue.</string>
    <string name="next">Next</string>
    <string name="done">Done</string>
    <string name="scan_frequency">Scan Frequency</string>
    <string name="finish">Finish</string>
    <string name="customization">Customization</string>
    <string name="application_theme">Application Theme</string>
    <string name="player_color_scheme">Color Accent</string>
    <string name="album_art">Album Art</string>
    <string name="album_art_style">Album Art Style</string>
    <string name="album_art_sources">Album Art Source</string>
    <string name="folders">Folders</string>
    <string name="select_folders">Select Music Folders</string>
    <string name="licenses_and_about">Licenses &amp; About</string>
    <string name="contact_us">Contact Us</string>
    <string name="blacklists">Blacklists</string>
    <string name="blacklist_manager">Blacklist Manager</string>
    <string name="scan_download_album_art">Scan and Download Album Art</string>
    <string name="enter_google_play_credentials">Please enter the username and password for your Google Play Music account. This information will be stored on your device and used to access your songs and playlists.</string>
    <string name="username">example@gmail.com</string>
    <string name="password">Password</string>
    <string name="scan_frequency_instructions">Pick how often you want your library to be rescanned for new music. You can always manually rescan from the app too.</string>
    <string name="scan_every_startup">Scan at every startup</string>
    <string name="scan_every_3_startups">Scan every 3 startups</string>
    <string name="scan_every_5_startups">Scan every 5 startups</string>
    <string name="scan_every_10_startups">Scan every 10 startups</string>
    <string name="scan_every_20_startups">Scan every 20 startups</string>
    <string name="scan_manually">Scan manually</string>
    <string name="ready_to_scan_instructions">ACE will now build your music library and album art. Feel free to close the app during this process.</string>
    <string name="swipe_left_to_continue">Swipe left to continue.</string>
    <string name="preferred_album_art">Album Art</string>
    <string name="use_embedded_art_only">Use embedded art only</string>
    <string name="use_folder_art_only">Use folder art only</string>
    <string name="preferred_album_art_instructions">Choose your preferred album art source. If you\'re not sure, choose the first option. You can change these options later in Settings.</string>
    <string name="google_play_music_no_asterisk">Google Play Music</string>
    <string name="google_play_music_account">Google Play Music Account</string>
    <string name="music_libraries">Custom Libraries</string>
    <string name="add_music_library">Create Custom Library</string>
    <string name="edit_music_library">Edit Custom Library</string>
    <string name="delete_music_library">Delete Custom Library</string>
    <string name="audio_settings">Audio Settings</string>
    <string name="headphones_unplug_action">Headphones Unplug Action</string>
    <string name="crossfade_tracks">Crossfade Tracks</string>
    <string name="current_queue">Current queue</string>
    <string name="rebuild_music_library">Rebuild Music Library</string>
    <string name="music_library">Music Library</string>
    <string name="upgrade">Upgrade</string>
    <string name="upgrade_to_full_version">Upgrade to Full Version</string>
    <string name="get_pinned_songs">Get Pinned Songs from Official Google Music App</string>
    <string name="equalizer">Equalizer</string>
    <string name="reset_blacklist">Reset Blacklist</string>
    <string name="scrobbling">Scrobbling</string>
    <string name="track_change_animation">Track Change Animation</string>
    <string name="default_folder_for_folders_view">Default Folder for Folders View</string>
    <string name="default_browser">Default Browser</string>
    <string name="artists_layout">Artists Layout</string>
    <string name="album_artists_layout">Album Artists Layout</string>
    <string name="albums_layout">Albums Layout</string>
    <string name="show_lockscreen_controls">Show lockscreen controls</string>
    <string name="show_lockscreen_controls_description">Toggle lockscreen playback controls.</string>
    <string name="crossfade_duration">Crossfade Duration</string>
    <string name="pick_whats_best_for_me">Pick what\'s best for me</string>
    <string name="appearance">Appearance</string>
    <string name="layouts">Layouts</string>
    <string name="appearance_description">Change the app\'s theme, colors, and more.</string>
    <string name="layouts_description">Switch between list and grid views for browsers.</string>
    <string name="music_folders_description">Rebuild your music library and change selected music folders.</string>
    <string name="about_description">About the app, open source licenses, and contact information</string>
    <string name="app_theme_description">Choose between a dark and light theme.</string>
    <string name="colors_description">Select a color scheme to go with your selected theme.</string>
    <string name="default_browser_description">Pick the default browser to display when the app starts.</string>
    <string name="genres_layout">Genres Layout</string>
    <string name="playlists_layout">Playlists Layout</string>
    <string name="folders_layout">Folders Layout</string>
</resources>