<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <item
        android:id="@+id/action_pin"
        android:orderInCategory="97"
        android:showAsAction="always"
        android:title="@string/pin"
        android:icon="@drawable/pin_light" />
    
    <item 
        android:id="@+id/action_queue_drawer"
        android:title="@string/current_queue"
        android:icon="@drawable/queue_drawer_light"
        android:showAsAction="always"
        android:orderInCategory="98" />
    
    <item
        android:id="@+id/action_play_all"
        android:orderInCategory="99"
        android:showAsAction="never"
        android:title="@string/play_all"
        android:icon="@drawable/btn_playback_play" />
    
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:icon="@drawable/action_settings_light"
        android:title="@string/action_settings"/>

</menu>
