<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
	<item 
        android:id="@+id/action_pin"
        android:title="@string/pin"
        android:icon="@drawable/pin_light"
        android:showAsAction="always"
        android:orderInCategory="97" />    
    
    <item 
        android:id="@+id/action_queue_drawer"
        android:title="@string/current_queue"
        android:icon="@drawable/queue_drawer_light"
        android:showAsAction="ifRoom"
        android:orderInCategory="99" />
    
    <item 
        android:id="@+id/action_equalizer"
        android:title="@string/equalizer"
        android:icon="@drawable/equalizer_light"
        android:showAsAction="always"
        android:orderInCategory="98" />
    
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:icon="@drawable/action_settings_light"
        android:title="@string/action_settings"/>
    
	<item
        android:id="@+id/action_equalizer_toggle"
        android:showAsAction="always"
        android:actionLayout="@layout/actionbar_toggle_switch_layout"
        android:visible="false"
        android:orderInCategory="99" />   
    
    <item
        android:id="@+id/action_done"
        android:orderInCategory="100"
        android:visible="false"
        android:showAsAction="always"
        android:icon="@drawable/checkmark_light" />

</menu>
