<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/now_playing_controls_background_light" >

    <TextView
        android:id="@+id/welcome_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/preferred_album_art"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#0099CC"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/welcome_text_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/welcome_header"
        android:layout_below="@+id/welcome_header"
        android:layout_marginRight="30dp"
        android:layout_marginTop="25dp"
        android:text="@string/preferred_album_art_instructions"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <RadioGroup
        android:id="@+id/album_art_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/welcome_text_1"
        android:layout_below="@+id/welcome_text_1"
        android:layout_marginTop="30dp" >

        <RadioButton
            android:id="@+id/pick_whats_best_for_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pick_whats_best_for_me"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <RadioButton
            android:id="@+id/use_embedded_art_only"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/use_embedded_art_only"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
        <RadioButton
            android:id="@+id/use_folder_art_only"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/use_folder_art_only"
            android:textAppearance="?android:attr/textAppearanceMedium" />
            
    </RadioGroup>

</RelativeLayout>